primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Activity__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <description>When this activity occurred.</description>
    <type>DateTime</type>
</CustomField>