primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Activity__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <description>Communication channel used for this activity.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Push Notification</fullName>
            </value>
            <value>
                <fullName>In-App</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>